personal-website/personal-website.css
*{
    box-sizing: border-box;
    margin: 0 ;
    padding: 0;
    background-color: black;
}

html{
    scroll-behavior: smooth;
}

body{
    padding-top: 100px;
}

h2{
    font-size: 28px;
}

li, a, button, p{
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
}



/*header🟢🟢🟢🟢🟢🟢*/
header{
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 5%;
}

.logo{
    cursor: pointer;
    font-size: 20px;
    color: #edf0f1;
}

span{
    color: #33b3a6;
}

.nav_links{
    list-style: none;
}

.nav_links li{
    position: relative;
    display: inline-block;
    margin: 0 20px;

}


/*hover underline-----------*/
.nav_links li::after{
    content: '';
    position: absolute;
    background-color: #33b3a6;
    height: 3px;
    /*width: 100%;*/
    left: 0;
    bottom: -8px;
    transition: all 0.5s ease;
}

.nav_links li:hover::after{
   width: 100%;
    transition: all 0.5s ease;
}
/*hover underline ends---------*/


.nav_links li a:hover{
    /*color:#DC143C;*/
    transition: all 0.5s ease 0s;
}

button{
    padding: 9px 25px;
    border: none;
    background-color: #33b3a6;
    border-radius: 50px;
    cursor: pointer;
}
/*header🛑🛑🛑🛑🛑🛑*/

section{
    padding: 1rem 9%;

}

/*home🟢🟢🟢🟢🟢🟢*/
.home{
    margin: 0 2.5%;
    width: 95%;
    border-radius: 1rem;
    background-size: cover;
    background: url("../img/code-background2.png") center no-repeat;
    display: flex;
    min-height: 65vh;

}

.content h1{
    font-size: 40px;
    margin-top: 200px;
    text-align: center;
    background-color: black;
    color: white;
}
.content span{
    font-size: 30px;
}
/*home🛑🛑🛑🛑🛑🛑*/

/*about🟢🟢🟢🟢🟢🟢*/
.about{
    background-color: #24252A;
    height: 50vh;
    display: flex;
    align-items: center;

}

.description{
    background-color: #24252A;
    text-align: center;
    width: 33%;

}

.description h2, p{
    background-color: #24252A;
    color: #edf0f1;
}



/*about🛑🛑🛑🛑🛑🛑*/

